<resources>
    <string name="app_name">PCAPdroid mitm</string>
    <string name="intro_text">You can control the mitm addon from the PCAPdroid app</string>
    <string name="python">Python</string>
    <string name="mitmproxy">Mitmproxy</string>
    <string name="cryptography">Cryptography</string>
    <string name="abi">ABI</string>
    <string name="openssl">OpenSSL</string>
    <string name="open_pcapdroid">Open PCAPdroid</string>
    <string name="addon">Addon</string>
    <string name="js_injector">Js Injector</string>
    <string name="hint">Hint</string>
    <string name="js_injector_hint">The Js Injector allows you to inject Javascript code into web pages. Check out the <a href="https://emanuele-f.github.io/PCAPdroid/advanced_features#46-js-injector">PCAPdroid user guide</a> for more details</string>
    <string name="add_script">Add script</string>
    <string name="add_action">Add</string>
    <string name="cancel_action">Cancel</string>
    <string name="URL">URL</string>
    <string name="missing_required_parameter">Missing required parameter</string>
    <string name="script_already_defined">A script with the same file name exists</string>
    <string name="empty_list">Empty list</string>
    <string name="loading">Loading…</string>
    <string name="version_and_author">v%s – %s</string>
    <string name="script_download_failed">Download %1$s failed</string>
    <string name="select_all">Select all</string>
    <string name="delete">Delete</string>
    <string name="n_selected">%1$d selected</string>
    <string name="items_delete_confirm">Delete the selected items?</string>
    <string name="update">Update</string>
    <string name="download_in_progress">Script download is already in progress</string>
    <string name="app_not_found">App not found</string>
    <string name="addons">Addons</string>
    <string name="specify_user_dir">Select the directory where your custom scripts are located</string>
    <string name="user_addon">User addon</string>
    <string name="set_user_dir">Set user dir</string>
    <string name="addons_hint">You can create mitmproxy addons to implement your custom logic. Select a user directory and place your scripts there</string>
    <string name="restart_to_apply">Restart the capture to apply the changes</string>
    <string name="enable_files_access">Enable files access</string>
    <string name="enable_files_access_info">To allow addons to write files in the public user directory, it\'s necessary to grant this app access to the device storage. Addons will be able to read and write arbitrary files, so be sure to only use trusted addons!</string>
    <string name="enable">Enable</string>
    <string name="permission_already_granted">Permission already granted</string>
    <string name="files_access_not_granted">Files access was not granted</string>
</resources>
