<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/show_hint"
        android:title="@string/hint"
        android:orderInCategory="10"
        android:icon="@drawable/ic_help"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/update"
        android:title="@string/update"
        android:orderInCategory="15"
        android:icon="@drawable/ic_refresh"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/select_user_dir"
        android:title="@string/set_user_dir"
        android:orderInCategory="20"
        android:showAsAction="never" />

    <item
        android:id="@+id/enable_files_access"
        android:title="@string/enable_files_access"
        android:orderInCategory="30"
        android:showAsAction="never" />
</menu>